SERVER-53855 Resharding recipient secondaries ignore no-op oplog entries meant to bump config.transactions records